<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_editar"
        android:icon="@drawable/editar"
        android:orderInCategory="300"
        android:title="@string/editar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_borrar"
        android:icon="@drawable/eliminar"
        android:orderInCategory="300"
        android:title="@string/eliminar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_guardar"
        android:icon="@drawable/guardar"
        android:orderInCategory="299"
        android:title="@string/guardar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_llamar"
        android:icon="@drawable/whatsapp_foreground"
        android:orderInCategory="280"
        android:title="@string/whatsapp"
        app:showAsAction="ifRoom" />
</menu>
