<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_marginBaseline="@dimen/cardview_default_elevation">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="@dimen/imagen_lista_personaje_tamano"
        android:layout_height="@dimen/imagen_lista_personaje_tamano"
        android:layout_marginTop="@dimen/layout_marginTop_default_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/imagen_perfil" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="201dp"
        android:layout_height="18dp"
        android:layout_marginStart="@dimen/margen_activity_default_vertical"
        android:text="@string/defecto"
        app:layout_constraintStart_toEndOf="@+id/labelTitulo"
        app:layout_constraintTop_toTopOf="@+id/labelTitulo" />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginStart="@dimen/layout_marginStart_default_item"
        android:text="@string/defecto"
        app:layout_constraintStart_toEndOf="@+id/labelGenero"
        app:layout_constraintTop_toTopOf="@+id/labelGenero" />

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_default_item"
        android:layout_marginTop="@dimen/layout_marginTop_default_item"
        android:text="@string/titulo"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toTopOf="@+id/ivFoto" />

    <TextView
        android:id="@+id/labelGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/layout_height_default_item"
        android:text="@string/genero"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/labelTitulo" />

    <TextView
        android:id="@+id/labelDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_height_default_item"
        android:text="@string/director"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/labelGenero"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/labelGenero"
        app:layout_constraintTop_toBottomOf="@+id/labelGenero" />

    <TextView
        android:id="@+id/tvNota"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/margen_activity_default_vertical"
        android:layout_marginTop="32dp"
        android:text="@string/defecto"
        android:textColor="@color/reca"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvGenero"
        app:layout_constraintTop_toTopOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvDirector"
        android:layout_width="201dp"
        android:layout_height="@dimen/layout_height_default_item"
        android:layout_marginStart="@dimen/layout_marginStart_default_item"
        android:text="@string/defecto"
        app:layout_constraintStart_toEndOf="@+id/labelDirector"
        app:layout_constraintTop_toTopOf="@+id/labelDirector" />

</androidx.constraintlayout.widget.ConstraintLayout>