<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/ecaFilms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_activity_default_horizontal"
        android:text="@string/name_ecafilms"
        android:textColor="@color/reca"
        android:translationZ="2dp"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textIUsuario"
        android:layout_width="@dimen/layout_width_default"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_activity_default_vertical"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/ecaFilms"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/ecaFilms"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/miColorPrimario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/pading_iconos_default"
            android:hint="@string/hint_introducir_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textIContrasena"
        android:layout_width="@dimen/layout_width_default"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textIMail"
        app:layout_constraintTop_toBottomOf="@+id/textIMail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/candadopass"
        android:layout_marginTop="@dimen/margen_activity_default_vertical"
        app:startIconTint="@color/miColorPrimario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/pading_iconos_default"
            android:hint="@string/hint_introducir_pass"
            android:inputType="textPassword"
            app:boxBackgroundColor="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textIpass2"
        android:layout_width="@dimen/layout_width_default"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/textIContrasena"
        app:layout_constraintTop_toBottomOf="@+id/textIContrasena"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/candadopass"
        android:layout_marginTop="@dimen/margen_activity_default_vertical"
        app:startIconTint="@color/miColorPrimario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/pading_iconos_default"
            android:hint="@string/hint_introducir_pass2"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_activity_default_horizontal"
        android:text="@string/btnRegistrarse"
        app:layout_constraintEnd_toEndOf="@+id/tITelefono"
        app:layout_constraintStart_toStartOf="@+id/tITelefono"
        app:layout_constraintTop_toBottomOf="@+id/tITelefono" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textIMail"
        android:layout_width="@dimen/layout_width_default"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textIUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textIUsuario"
        app:startIconDrawable="@drawable/mail"
        app:startIconTint="@color/miColorPrimario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/pading_iconos_default"
            android:hint="@string/hint_introducir_mail2"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/margen_activity_default_vertical"
            app:boxBackgroundColor="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tITelefono"
        android:layout_width="@dimen/layout_width_default"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/textIpass2"
        app:layout_constraintTop_toBottomOf="@+id/textIpass2"
        app:startIconDrawable="@drawable/telefono"
        android:layout_marginTop="@dimen/margen_activity_default_vertical"
        app:startIconTint="@color/miColorPrimario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/pading_iconos_default"
            android:hint="@string/hint_introducir_telefono"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="75dp"
        android:layout_marginEnd="159dp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/ecaFilms"
        app:layout_constraintEnd_toEndOf="@+id/ecaFilms"
        app:layout_constraintTop_toTopOf="@+id/ecaFilms"
        app:srcCompat="@drawable/recafilms"
        android:contentDescription="@string/name_ecafilms" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>